<resources>
    <string name="app_name">Teachent</string>
    <string name="title_activity_teachent_login">登录</string>
    <string name="title_activity_teachent_initial">初次使用</string>
    <string name="message_download_dialog">下载中...</string>
    <string name="message_load_dialog">加载中...</string>


    <!-- TeachentInitialActivity-->
    <string name="error_initial_finish_setting_empty">请完善信息填写。</string>
    <string name="tip_initial_finish_setting_relogin">用户信息已更新，请重新登录。</string>
    <!-- TeachentLoginActivity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录或注册</string>
    <string name="error_invalid_email">Email无效</string>
    <string name="error_invalid_password">密码长度太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"需要获取联系人权限"</string>
    <string name="error_login_or_register_fail">登录或注册失败，请检查填入信息正确性。</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--TeachentMainActivity-->
    <string name="text_user_null">未指定</string>
    <!--ActionBar-->
    <string name="action_qrcode">扫一扫</string>

    <!--Title-->
    <string name="title_activity_teachent_main">老师带你飞</string>

    <!--导航栏1-->
    <string name="drawer_menu_item_learn">学习中心</string>
    <string name="drawer_menu_item_learn_checkin">主页</string>
    <string name="drawer_menu_item_learn_ppt">课件</string>
    <string name="drawer_menu_item_learn_homework">作业</string>
    <!--导航栏2-->
    <string name="drawer_menu_item_communicate">交流中心</string>
    <string name="drawer_menu_item_communicate_contact">联系老师</string>
    <string name="drawer_menu_item_communicate_leave_message">留言板</string>
    <!--导航栏3-->
    <string name="drawer_menu_item_settings">设置中心</string>
    <string name="drawer_menu_item_settings_information">我的信息</string>
    <string name="drawer_menu_item_settings_about">关于我们</string>
    <string name="drawer_menu_item_settings_logout">退出当前账号</string>

    <!--考勤Fragment-->
    <string name="fragment_check_in_greeting_morning">上午好,</string>
    <string name="fragment_check_in_greeting_afternoon">下午好,</string>
    <string name="fragment_check_in_greeting_evening">晚上好,</string>
    <string name="fragment_check_in_chart_yes_check">正常出勤</string>
    <string name="fragment_check_in_chart_no_check">未出勤</string>
    <string name="fragment_check_in_chart_center_text">学生考勤</string>

    <!--课件Fragment-->
    <string name="fragment_ppt_base_title">班级列表</string>
    <string name="fragment_ppt_title">课件列表</string>
    <string name="fragment_ppt_button_text">返回</string>
    <string name="fragment_ppt_message_list_null">请至少选择一个课件！</string>
    <drawable name="frag_ppt_button_normal">#3366CC</drawable>
    <drawable name="frag_ppt_button_pressed">#003399</drawable>

    <!--作业Fragment-->
    <string name="fragment_homework_title">作业列表</string>
    <string name="fragment_homework_detail_title">作业详情</string>
    <string name="fragment_homework_detail_button_text">提交作业</string>
    <string name="fragment_homework_detail_close_button_text">返回</string>

    <!--联系老师Fragment-->
    <string name="fragment_contact_title">联系老师</string>

    <!--留言板Fragment-->
    <string name="fragment_leave_message_title">留言板</string>

    <!--留言板详情Fragment-->
    <string name="fragment_leave_message_detail_title">留言详情</string>
    <string name="fragment_leave_message_detail_close_button_text">返回</string>
    <string name="fragment_leave_message_detail_comment_button_text">评论</string>


    <!--我的信息 头像信息Fragment-->
    <string name="fragment_information_avatar_title">头像详情</string>
    <string name="fragment_information_avatar_button_select">选取</string>
    <string name="fragment_information_avatar_button_back">返回</string>

    <!--我的信息 文本信息Fragment-->
    <string name="fragment_information_text_title">默认标题</string>
    <string name="fragment_information_text_button_save">保存</string>
    <string name="fragment_information_text_button_cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
