<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.ant.nepu.teachent.fragment.InformationAvatarFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rl_frag_homework_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="@dimen/fab_margin">

            <TextView
                android:id="@+id/tv_frag_information_avatar_title"
                style="@style/fragment_ppt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_frag_information_avatar_select"
                android:layout_alignBottom="@+id/btn_frag_information_avatar_select"
                android:layout_centerHorizontal="true"
                android:text="@string/fragment_information_avatar_title" />

            <Button
                android:id="@+id/btn_frag_information_avatar_select"
                style="@style/fragment_ppt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/frag_ppt_btn_dl_selector"
                android:text="@string/fragment_information_avatar_button_select" />

            <Button
                android:id="@+id/btn_frag_information_avatar_back"
                style="@style/fragment_ppt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/frag_ppt_btn_dl_selector"
                android:text="@string/fragment_information_avatar_button_back" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rl_frag_homework_title">

            <ImageView
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_centerInParent="true"
                android:id="@+id/iv_frag_information_avatar_preview"
                />

        </RelativeLayout>


    </RelativeLayout>
</FrameLayout>